--- a/styles/auth.css
+++ b/styles/auth.css
@@ -40,7 +40,7 @@
   background-color: #4a5162;
   outline: none;
   border-width: 0px;
-  border-bottom: 2px solid #726dfe;
+  border-bottom: 2px solid #73beff;
   color: white;
 }
 
@@ -54,11 +54,26 @@
   border-radius: 4px;
   border-width: 0px;
   cursor: pointer;
-  background-color: #726dfe;
+  background-color: #73beff;
   color: white;
   outline: none;
 }
 
 .submit-button::hover {
-  background-color: #938ffe;
+  background-color: #73beff;
 }
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+  height: 80vh; 
+}
+.center-container p{
+  font-size: 20px;
+  color:white;
+  
+}
+
