--- a/styles/chats.css
+++ b/styles/chats.css
@@ -26,7 +26,7 @@
 }
 
 .ce-active-chat-card {
-  background-color: #726dfe !important;
+  background-color: #73beff !important;
 }
 
 .ce-chat-title-text {
@@ -53,7 +53,7 @@
 }
 
 .ce-primary-button {
-  background-color: #9a97fc !important;
+  background-color: #73beff !important;
 }
 
 .ce-message-date-text {
@@ -61,7 +61,7 @@
 }
 
 .ce-my-message-bubble {
-  background-color: #726dfe !important;
+  background-color: #73beff !important;
 }
 
 .ce-my-message-sinding-bubble {
@@ -69,7 +69,7 @@
 }
 
 .ce-my-message-timestamp {
-  color: #9a97fc !important;
+  color: #73beff !important;
 }
 
 .ce-their-message-timestamp {
@@ -77,7 +77,7 @@
 }
 
 #ce-send-message-button {
-  background-color: #9a97fc !important;
+  background-color: #73beff !important;
 }
 
 #ce-ice-breaker-gif {
@@ -154,8 +154,8 @@
 
 .ce-danger-button {
   background-color: #4a5162 !important;
-  border: 1px solid #9a97fc !important;
-  color: #9a97fc !important;
+  border: 1px solid #73beff !important;
+  color: #73beff !important;
 }
 
 .ce-autocomplete-close {
